hphp/hack/test/typecheck/lambda/lambda_bad_arity.php.exp
File "lambda_bad_arity.php", line 15, characters 7-65:
Too few arguments (required 2 but got 1) (Typing[4104])
File "lambda_bad_arity.php", line 6, characters 5-32:
Definition is here
File "lambda_bad_arity.php", line 15, characters 7-65:
Invalid argument (Typing[4040])
File "lambda_bad_arity.php", line 15, characters 7-65:
Too few arguments
File "lambda_bad_arity.php", line 6, characters 5-32:
Because of this definition
